# sync

./: .gitignore  Makefile  README.md  go.mod
cmd/: main.go  stack.yaml  sync.cabal
cmd/src/: Main.hs
daemon/: Cargo.toml  Makefile  daemon.cabal  stack.yaml
daemon/src/: Init.hs  main.rs
mobile/: Makefile
